fixed blog post layout issues

--- a/css/app.css
+++ b/css/app.css
@@ -642,17 +642,11 @@ video {
 .w-16 {
   width: 4rem;
 }
-.w-24 {
-  width: 24rem;
-}
 .w-full {
   width: 100%;
 }
 .min-w-full {
   min-width: 100%;
-}
-.min-w-24 {
-  min-width: 6rem;
 }
 .max-w-\[700px\] {
   max-width: 700px;
@@ -666,8 +660,14 @@ video {
 .max-w-sm {
   max-width: 24rem;
 }
-.max-w-24 {
-  max-width: 6rem;
+.max-w-xl {
+  max-width: 36rem;
+}
+.max-w-lg {
+  max-width: 32rem;
+}
+.max-w-md {
+  max-width: 28rem;
 }
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -729,6 +729,9 @@ video {
 .rounded-full {
   border-radius: 9999px;
 }
+.border {
+  border-width: 1px;
+}
 .border-b {
   border-bottom-width: 1px;
 }
@@ -772,10 +775,6 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-.object-fill {
-  -o-object-fit: fill;
-     object-fit: fill;
 }
 .p-4 {
   padding: 1rem;
@@ -1483,16 +1482,16 @@ article>*:not(.entry-content),
     width: 50%;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:max-w-screen-lg {
     max-width: 960px;
   }
 
-  .md\:max-w-sm {
-    max-width: 24rem;
+  .md\:max-w-4xl {
+    max-width: 56rem;
+  }
+
+  .md\:max-w-3xl {
+    max-width: 48rem;
   }
 
   .md\:flex-shrink {
