--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -142,17 +142,11 @@
 .w-16 {
  width: 4rem
 }
-.w-24 {
- width: 24rem
-}
 .w-full {
  width: 100%
 }
 .min-w-full {
  min-width: 100%
-}
-.min-w-24 {
- min-width: 6rem
 }
 .max-w-\[700px\] {
  max-width: 700px
@@ -166,8 +160,14 @@
 .max-w-sm {
  max-width: 24rem
 }
-.max-w-24 {
- max-width: 6rem
+.max-w-xl {
+ max-width: 36rem
+}
+.max-w-lg {
+ max-width: 32rem
+}
+.max-w-md {
+ max-width: 28rem
 }
 .transform {
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
@@ -229,6 +229,9 @@
 .rounded-full {
  border-radius: 9999px
 }
+.border {
+ border-width: 1px
+}
 .border-b {
  border-bottom-width: 1px
 }
@@ -272,10 +275,6 @@
 .object-cover {
  -o-object-fit: cover;
     object-fit: cover
-}
-.object-fill {
- -o-object-fit: fill;
-    object-fit: fill
 }
 .p-4 {
  padding: 1rem
@@ -679,14 +678,14 @@ body {
  .md\:w-1\/2 {
   width: 50%
  }
- .md\:w-full {
-  width: 100%
- }
  .md\:max-w-screen-lg {
   max-width: 960px
  }
- .md\:max-w-sm {
-  max-width: 24rem
+ .md\:max-w-4xl {
+  max-width: 56rem
+ }
+ .md\:max-w-3xl {
+  max-width: 48rem
  }
  .md\:flex-shrink {
   flex-shrink: 1
